src/objects/BGCK__Answer_Type__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Actual_Value__c</fullName>
        <description>1. In checklist admin page, set actual value in Answer Type is required. 
2. In Question Checklist page,  when saving answer record, save this actual value to the answer record.</description>
        <label>Displayed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Maximum_Length__c</fullName>
        <label>Maximum Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Tip__c</fullName>
        <label>Tip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>BGCK__All</fullName>
        <columns>NAME</columns>
        <columns>BGCK__Actual_Value__c</columns>
        <columns>BGCK__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>